--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "type": "module",
   "name": "insta-email",
-  "version": "1.0.37",
+  "version": "1.0.0",
   "description": "for typescript demo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "devlin duldulao",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.17.9"
+  }
 }
