--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "name": "insta-email",
   "version": "1.0.38",
   "description": "for typescript demo",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
