--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "type": "module",
   "name": "insta-email",
-  "version": "1.0.41",
+  "version": "1.0.42",
   "description": "for typescript demo",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
